# mergen

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  regexes.rs
src/commands/: extract.rs  mod.rs
src/commands/test_static_files/: iceid_proofpoint.html
