[package]
name = "mergen"
version = "0.1.0"
edition = "2021"
description = "Extract and add context to data"

[dependencies]
async-trait = "0.1.74"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = "0.11.22"
select = "0.6.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
structopt = "0.3.26"
tokio = { version = "1.33.0", features = ["full"] }
